# zellij-whisper-talk

./: .gitignore  Cargo.toml  README.md  dev.kdl  plugin.kdl
.cargo/: config.toml
.github/workflows/: release.yml
docs/specs/: one-combo-toggle.md
scripts/: install.sh  transcribe.py
scripts/whisper_sidecar/: __init__.py  config.py  http.py  lifecycle.py  recorders.py  security.py
src/: config.rs  main.rs  sanitize.rs
tests/: install_sh_test.sh  test_config.py  test_http.py  test_lifecycle.py  test_package.py  test_recorders.py  test_security.py  test_transcribe.py
